--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -212,11 +212,11 @@
                     android:layout_marginRight="@dimen/dp_6"/>
 
             </RelativeLayout>
-            <view
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
-                android:background="@color/background"
-                ></view>
+            <!--<view-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/dp_1"-->
+                <!--android:background="@color/background"-->
+                <!--&gt;</view>-->
 
             <LinearLayout
                 android:background="@android:color/white"
@@ -334,11 +334,11 @@
                 android:layout_marginLeft="@dimen/dp_12"
                 android:src="@drawable/mine_middle_title"/>
 
-            <view
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_1"
-                android:background="@color/background"
-                android:layout_marginTop="@dimen/dp_10"></view>
+            <!--<view-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/dp_1"-->
+                <!--android:background="@color/background"-->
+                <!--android:layout_marginTop="@dimen/dp_10"></view>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
