--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -116,70 +116,208 @@
             </RelativeLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_12"
-                    android:text="￥122"
-                    android:textColor="@color/app_theme"
-                    android:textSize="@dimen/sp_15" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_11"
-                    android:text="222"
-                    android:textColor="@color/text9"
-                    android:textSize="@dimen/sp_12" />
+              android:visibility="gone"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
+              <LinearLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_vertical"
+                  android:orientation="horizontal">
+    
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/dp_12"
+                      android:text="￥122"
+                      android:textColor="@color/app_theme"
+                      android:textSize="@dimen/sp_15" />
+    
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/dp_11"
+                      android:text="222"
+                      android:textColor="@color/text9"
+                      android:textSize="@dimen/sp_12" />
+              </LinearLayout>
+              <TextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_marginLeft="@dimen/dp_13"
+                  android:layout_marginRight="@dimen/dp_13"
+                  android:maxLines="2"
+                  android:text="异丙甲草胺绿色无污染大豆田玉米田小麦田均可放心使用;会员可享受包邮"
+                  android:textColor="@color/text3"
+                  android:textSize="@dimen/sp_15" />
+              <RelativeLayout
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center_vertical"
+                  android:orientation="horizontal">
+    
+                  <TextView
+                      android:id="@+id/at_goods_detail_selled_num"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/dp_12"
+                      android:text="已售100"
+                      android:textColor="@color/text9"
+                      android:textSize="@dimen/sp_12" />
+    
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginLeft="@dimen/dp_11"
+                      android:layout_toRightOf="@id/at_goods_detail_selled_num"
+                      android:text="库存200"
+                      android:textColor="@color/text9"
+                      android:textSize="@dimen/sp_12" />
+    
+                  <TextView
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_alignParentRight="true"
+                      android:layout_marginRight="@dimen/dp_12"
+                      android:text="快递：免运费"
+                      android:textSize="@dimen/sp_12" />
+              </RelativeLayout>
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_13"
-                android:layout_marginRight="@dimen/dp_13"
-                android:maxLines="2"
-                android:text="异丙甲草胺绿色无污染大豆田玉米田小麦田均可放心使用;会员可享受包邮"
-                android:textColor="@color/text3"
-                android:textSize="@dimen/sp_15" />
-
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/at_goods_detail_selled_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_12"
-                    android:text="已售100"
-                    android:textColor="@color/text9"
-                    android:textSize="@dimen/sp_12" />
-
+                android:orientation="vertical">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_11"
-                    android:layout_toRightOf="@id/at_goods_detail_selled_num"
-                    android:text="库存200"
-                    android:textColor="@color/text9"
-                    android:textSize="@dimen/sp_12" />
-
+                    android:layout_marginTop="@dimen/dp_9"
+                    android:text="飞利浦蒸馏机健康安全三年保修"
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/text3"
+                    android:layout_marginLeft="@dimen/dp_12"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/dp_12"
-                    android:text="快递：免运费"
-                    android:textSize="@dimen/sp_12" />
-            </RelativeLayout>
+                    android:text="￥120"
+                    android:textSize="@dimen/sp_13"
+                    android:textColor="@color/app_theme"
+                    android:layout_marginLeft="@dimen/dp_12"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+                    <ProgressBar
+                        android:id="@+id/at_pre_sell_pb"
+                        android:alpha="1"
+                        android:layout_width="@dimen/dp_321"
+                        android:layout_height="@dimen/dp_7"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:progressDrawable="@drawable/pre_sell_progress"
+                        android:layout_marginLeft="@dimen/dp_15"
+                        android:max="100"
+                        android:progress="80"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="@dimen/dp_3"/>
+                    <ImageView
+                        android:layout_width="@dimen/dp_17"
+                        android:layout_height="@dimen/dp_20"
+                        android:layout_marginLeft="@dimen/dp_13"
+                        android:src="@drawable/pre_sell_fire"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_53"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="80"
+                            android:textColor="@color/text3"
+                            android:textSize="@dimen/sp_15"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="预定人数"
+                            android:textSize="@dimen/sp_12"
+                            android:textColor="@color/text3"/>
+                    </LinearLayout>
+                    <View
+                        android:layout_width="@dimen/dp_1"
+                        android:layout_height="@dimen/dp_30"
+                        android:background="@color/background"
+                        android:layout_gravity="center"></View>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="80"
+                            android:textColor="@color/text3"
+                            android:textSize="@dimen/sp_15"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="预售金额"
+                            android:textSize="@dimen/sp_12"
+                            android:textColor="@color/text3"/>
+                    </LinearLayout>
+                    <View
+                        android:layout_width="@dimen/dp_1"
+                        android:layout_height="@dimen/dp_30"
+                        android:background="@color/background"
+                        android:layout_gravity="center"></View>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="80"
+                            android:textColor="@color/text3"
+                            android:textSize="@dimen/sp_15"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="达成率"
+                            android:textSize="@dimen/sp_12"
+                            android:textColor="@color/text3"/>
+                    </LinearLayout>
+                </LinearLayout>
+                
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_10"
+                    android:background="@color/background"></View>
+                
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_60">
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_10"
+                    android:background="@color/background"></View>
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -196,8 +334,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_12"
                     android:text="规格: "
+                    android:layout_marginLeft="@dimen/dp_12"
                     android:textColor="@color/text9"
                     android:textSize="@dimen/sp_12" />
 
@@ -227,6 +365,34 @@
                 android:background="@color/background" />
 
             <LinearLayout
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="物流: "
+                android:layout_marginLeft="@dimen/dp_12"
+                android:textColor="@color/text9"
+                android:textSize="@dimen/sp_12" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" 预计3.20号开始发货 "
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_13" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/background" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_38"
                 android:gravity="center"
@@ -238,6 +404,15 @@
                     android:background="@color/app_theme"
                     android:text="详情"
                     android:textColor="@android:color/white"
+                    android:textSize="@dimen/sp_16" />
+
+                <Button
+                    android:visibility="gone"
+                    android:layout_width="@dimen/dp_100"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/white"
+                    android:text="须知"
+                    android:textColor="@color/text3"
                     android:textSize="@dimen/sp_16" />
 
                 <Button
