--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -316,6 +316,42 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dp_6"/>
             </RelativeLayout>
+            <RelativeLayout
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40">
+                <ImageView
+                    android:id="@+id/at_confirm_order_iv_my_hongbao"
+                    android:layout_width="@dimen/dp_31"
+                    android:layout_height="@dimen/dp_26"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="@dimen/dp_11"
+                    android:src="@drawable/confirm_order_hongbao"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="现金红包"
+                    android:textColor="@color/text3"
+                    android:textSize="@dimen/sp_13"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/at_confirm_order_iv_my_hongbao"
+                    android:layout_marginLeft="@dimen/dp_10"/>
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/dp_12"
+                    android:background="@null"
+                    android:hint="请输入红包兑换码"
+                    android:textSize="@dimen/sp_13"
+                    android:textColor="@color/text6"/>
+            </RelativeLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:background="@color/background"></View>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40">
