--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <include
             layout="@layout/title"></include>
@@ -29,20 +29,13 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="收件人姓名"
-                android:textSize="@dimen/sp_15"
-                android:textColor="@color/text3"/>
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="请输入收件人姓名"
                 android:textColor="@color/text9"
                 android:textSize="@dimen/sp_13"
-                android:background="@null"
-                android:layout_marginLeft="@dimen/dp_20"/>
+                android:background="@null"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
@@ -54,20 +47,13 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="联系方式"
-                android:textSize="@dimen/sp_15"
-                android:textColor="@color/text3"/>
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="请输入手机号"
                 android:textColor="@color/text9"
                 android:textSize="@dimen/sp_13"
-                android:background="@null"
-                android:layout_marginLeft="@dimen/dp_20"/>
+                android:background="@null"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
@@ -79,20 +65,13 @@
             android:layout_marginLeft="@dimen/dp_12"
             android:gravity="center_vertical"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="所在地区"
-                android:textSize="@dimen/sp_15"
-                android:textColor="@color/text3"/>
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:hint="请选择"
+                android:hint="省 市 区"
                 android:textColor="@color/text9"
                 android:textSize="@dimen/sp_13"
-                android:background="@null"
-                android:layout_marginLeft="@dimen/dp_20"/>
+                android:background="@null"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
@@ -103,37 +82,40 @@
             android:layout_height="@dimen/dp_80"
             android:layout_marginLeft="@dimen/dp_12"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="详细地址"
-                android:textSize="@dimen/sp_15"
-                android:textColor="@color/text3"/>
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:hint="请填写详细地址"
                 android:textColor="@color/text9"
                 android:textSize="@dimen/sp_13"
+                android:gravity="top"
                 android:background="@null"
-                android:layout_marginLeft="@dimen/dp_20"/>
+                android:paddingTop="@dimen/dp_10"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
             android:background="@color/background"></View>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:gravity="center_vertical">
-            <RadioButton
+            android:layout_height="@dimen/dp_40">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="设为默认地址"
                 android:textSize="@dimen/sp_13"
                 android:textColor="@color/text3"
-                android:layout_marginLeft="@dimen/dp_12"/>
-        </LinearLayout>
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_centerVertical="true"/>
+
+            <ImageView
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_27"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_12"
+                android:src="@drawable/at_edit_address_not_selector"/>
+        </RelativeLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_1"
