--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -117,6 +117,7 @@
                     android:orientation="horizontal">
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -155,6 +156,18 @@
                             android:textColor="@android:color/white"
                             android:textSize="11sp" />
                     </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <Button
+                            android:layout_width="@dimen/dp_90"
+                            android:layout_height="@dimen/dp_40"
+                            android:layout_alignParentRight="true"
+                            android:background="@color/app_theme"
+                            android:text="删除"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/sp_15"/>
+                    </RelativeLayout>
                 </LinearLayout>
 
                 <!--<LinearLayout-->
