--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -201,6 +201,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="@dimen/dp_17"/>
                 <TextView
+                    android:id="@+id/fg_mine_tv_all_order"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
