--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -347,6 +347,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/fg_mine_ll_my_wallet"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
