--- a/app/src/main/res/layout/activity_pulish_goods.xml
+++ b/app/src/main/res/layout/activity_pulish_goods.xml
@@ -12,7 +12,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:focusableInTouchMode="true"
+        android:focusable="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
