--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -248,6 +248,7 @@
                     android:src="@drawable/home_good_goods"/>
 
                 <TextView
+                    android:id="@+id/fg_home_tv_myLower"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/jingpintuijian"
