--- a/app/src/main/res/layout/item_classfiy_detail_goods.xml
+++ b/app/src/main/res/layout/item_classfiy_detail_goods.xml
@@ -14,7 +14,8 @@
         <ImageView
             android:id="@+id/item_iv_classfiy_detail_goods"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"/>
 
         <LinearLayout
             android:id="@+id/item_classfiy_ll"
