--- a/app/src/main/res/layout/item_goods_img_detail.xml
+++ b/app/src/main/res/layout/item_goods_img_detail.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_200">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
         <ImageView
             android:id="@+id/item_goodsImgDetail_iv_img"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:scaleType="fitXY"
             android:src="@drawable/logo"/>
 </LinearLayout>
