--- a/app/src/main/res/layout/item_system_message.xml
+++ b/app/src/main/res/layout/item_system_message.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="@dimen/dp_11"
         android:layout_marginRight="@dimen/dp_10">
         <TextView
+            android:id="@+id/item_systemMsg_tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="快递滞留提醒"
@@ -23,6 +24,7 @@
             android:textColor="@color/text3"
             android:layout_centerVertical="true"/>
         <TextView
+            android:id="@+id/item_systemMsg_tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="19/04/17"
@@ -40,6 +42,7 @@
         android:layout_marginRight="@dimen/dp_10"
         android:layout_marginLeft="@dimen/dp_10">
         <ImageView
+            android:id="@+id/item_systemMsg_iv_msg"
             android:layout_width="@dimen/dp_75"
             android:layout_height="match_parent"
             android:src="@mipmap/ic_launcher"/>
@@ -50,15 +53,18 @@
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/dp_10">
             <TextView
+                android:id="@+id/item_systemMsg_tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="您的包裹已超过24小时未领取，请尽快前往菜鸟驿站取件。"
                 android:layout_marginRight="@dimen/dp_10"
                 android:textSize="@dimen/sp_13"
                 android:textColor="@color/text3"
+                android:lines="2"
+                android:ellipsize="end"
                 android:layout_marginTop="@dimen/dp_10"/>
-
             <TextView
+                android:id="@+id/item_systemMsg_tv_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="来自 菜鸟驿站"
