--- a/app/src/main/res/layout/popupwindow_store_cartid.xml
+++ b/app/src/main/res/layout/popupwindow_store_cartid.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -20,9 +20,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="确定"/>
-    </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/pw_storeCartId_rv_group"
+    </RelativeLayout>-->
+    <ExpandableListView
+        android:id="@+id/pw_storeCartId_elv"
+        android:layout_marginLeft="@dimen/dp_12"
+        android:layout_marginRight="@dimen/dp_12"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
