--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -31,17 +31,18 @@
                 android:text="纯植物提取水密码补水保湿礼盒套装"
                 android:layout_marginRight="@dimen/dp_24"
                 android:textSize="@dimen/sp_15"
+                android:lines="2"
+                android:ellipsize="end"
                 android:textColor="@color/text3"/>
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:layout_marginBottom="@dimen/dp_14">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_marginLeft="@dimen/dp_10">
                 <TextView
                     android:id="@+id/item_searchResult_tv_MemberPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:text="￥1299"
                     android:textColor="@color/app_theme"
                     android:textSize="@dimen/sp_15"/>
@@ -50,9 +51,9 @@
                     android:layout_toRightOf="@id/item_searchResult_tv_MemberPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="@dimen/dp_5"
+                    android:layout_marginLeft="@dimen/dp_15"
                     android:text="￥1599"
+                    android:layout_marginTop="@dimen/dp_3"
                     android:textColor="@color/text9"
                     android:textSize="@dimen/sp_12"/>
                 <TextView
@@ -61,7 +62,6 @@
                     android:layout_marginRight="@dimen/dp_12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:layout_marginLeft="@dimen/dp_5"
                     android:text="已售25"
                     android:textColor="@color/text6"
